# lightfield

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md
cfg/: generate_dots.toml  recon_dots.toml  test_scene.toml  test_scene_2.toml  test_scene_opaque.toml  test_torch_generate.toml  test_torch_recon.toml  test_volume.toml  torch_raytrix.toml  torch_recon.fld
cfg/cameras/: raytrix.toml  raytrix_1_0.toml  shi.toml  test_coded.toml  test_focal.toml  test_plenoptic.toml  test_simple.toml
cfg/geometries/: 100mm3.toml  100mm3_opaque.toml  100mm3_over.toml  dots.toml  dots_over.toml
cfg/lenses/: raytrix1.toml  raytrix2.toml  raytrix3.toml  raytrix_1_0.toml  raytrix_1_0_array.toml  raytrix_array.toml  raytrix_detector.toml  shi.toml  shi_detector.toml  test_array.toml  (+2 more)
cl/: ellipsoid_f32.opencl  fista_volume_solver_f32.opencl  image_geom_f32.opencl  isometry_f32.opencl  light_volume_f32.opencl  optics_f32.opencl  phantom_f32.opencl  potential_function_f32.opencl  rotate_f32.opencl  spline_kernel_f32.opencl  transport_dirac_f32.opencl  transport_pillbox_f32.opencl  vector_math_f32.opencl  volume_rotation_f32.opencl  volume_transport_dirac_f32.opencl  volume_transport_pillbox_f32.opencl
nb/: light_field_voxels.ipynb
opencl/: dirac_transport.opencl
py/: setup.py  test.py
rs/: Cargo.toml  angular_plane.rs  bounding_geometry.rs  c_api.rs  camera.rs  cl_traits.rs  coded_aperture_camera.rs  coded_aperture_imager.rs  detector.rs  ellipsoid.rs  env.rs  fista_volume_solver.rs  geom.rs  image_geom.rs  imager.rs  isometry.rs  lens.rs  lens_array.rs  lib.rs  light_field_geom.rs  light_volume.rs  light_volume_tracer.rs  mask.rs  object.rs  occluder.rs  optics.rs  phantom.rs  plenoptic_camera.rs  plenoptic_camera_calibration.rs  plenoptic_imager.rs  potential_function.rs  resample_volume.rs  rotate.rs  rotated_imager.rs  scene.rs  serialize.rs  single_lens_camera.rs  single_lens_imager.rs  spline_kernel.rs  transport.rs  (+3 more)
src/: lightfield.c  lightfield_angular_plane.c  lightfield_cl.c  lightfield_lixel.c  lightfield_optics.c  lightfield_plane_geometry.c  lightfield_transport.c
tex/: Makefile
(+45 files in other folders)
