[package]
name = 'lightfield'
version = '0.0.1'
authors = ['Madison McGaffin <greyhill@gmailcom>']

[lib]
name = 'lightfield'
path = 'rs/lib.rs'
crate-type = ['rlib']

[dependencies.num]
version = '0.1.32'

[dependencies.rand]
version = '0.3.14'

[dependencies.toml]
version = '0.1.29'

[dependencies.nalgebra]
version = '0.8.2'

[dependencies.proust]
git = "https://github.com/greyhill/proust"
version = "0.0.5"

