[package]
name = 'lightfield'
version = '0.0.1'
authors = ['Madison McGaffin <greyhill@gmail.com>']

[lib]
name = 'lightfield'
path = 'rs/lib.rs'
crate-type = ['rlib', 'dylib']

[dependencies.num]
version = '0.1.32'

[dependencies.rand]
version = '0.3.14'

[dependencies.toml]
version = '0.1.29'

[dependencies.nalgebra]
version = '0.8.2'

[dependencies.byteorder]
version = '0.5.1'

[dependencies.getopts]
version = '0.2.14'

[dependencies.proust]
git = "https://github.com/greyhill/proust"
version = "0.0.5"

[dependencies.avsfld]
git = "https://github.com/greyhill/avsfldrs"

[dependencies.image]
version = '0.10.0'

[[bin]]
name = "render_phantom"
path = "rs/bin/render_phantom.rs"

[[bin]]
name = "generate_data"
path = "rs/bin/generate_data.rs"

[[bin]]
name = "microlens_tool"
path = "rs/bin/microlens_tool.rs"

[[bin]]
name = "camera_tool"
path = "rs/bin/camera_tool.rs"

[[bin]]
name = 'recon_fista'
path = 'rs/bin/recon_fista.rs'

[[bin]]
name = 'recon_fbp'
path = 'rs/bin/recon_fbp.rs'
